@@ -1,10 +1,7 @@
 package fr.eni.ludotheque.bll;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-
-import java.util.*;
-
+import fr.eni.ludotheque.classes.Adresse;
+import fr.eni.ludotheque.dal.AdresseRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -12,12 +9,14 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import fr.eni.ludotheque.classes.Adresse;
-import fr.eni.ludotheque.dal.AdresseRepository;
+import java.util.List;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @SpringBootTest
 public class AdresseServiceTest {
-
     @Mock
     private AdresseRepository adresseRepository;
 
@@ -27,88 +26,70 @@ public class AdresseServiceTest {
     private Adresse adresse;
 
     @BeforeEach
-    void setUp() {
+    void init() {
         MockitoAnnotations.openMocks(this);
-
         adresse = new Adresse();
-        adresse.setNo_adresse(1);
-        adresse.setRue("Rue des Lilas");
-        adresse.setCode_postal(75000);
+        adresse.setNo_adresse(3);
+        adresse.setRue("Place de la République");
+        adresse.setCode_postal(75003);
         adresse.setVille("Paris");
     }
 
     @Test
     void testFindAll() {
-        List<Adresse> adresses = Arrays.asList(adresse);
-        when(adresseRepository.findAll()).thenReturn(adresses);
-
+        when(adresseRepository.findAll()).thenReturn(List.of(adresse));
         List<Adresse> result = adresseService.findAll();
-
         assertEquals(1, result.size());
         assertEquals("Paris", result.get(0).getVille());
-        verify(adresseRepository, times(1)).findAll();
+        verify(adresseRepository).findAll();
     }
 
     @Test
-    void testFindById() {
-        when(adresseRepository.findById(1)).thenReturn(Optional.of(adresse));
-
-        Adresse result = adresseService.findById(1);
-
-        assertNotNull(result);
-        assertEquals("Rue des Lilas", result.getRue());
-        verify(adresseRepository, times(1)).findById(1);
+    void testFindById_Found() {
+        when(adresseRepository.findById(3)).thenReturn(Optional.of(adresse));
+        Adresse res = adresseService.findById(3);
+        assertNotNull(res);
+        assertEquals(75003, res.getCode_postal());
+        verify(adresseRepository).findById(3);
     }
 
     @Test
     void testFindById_NotFound() {
-        when(adresseRepository.findById(99)).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            adresseService.findById(99);
-        });
-
-        assertEquals("Not Found", exception.getMessage());
-        verify(adresseRepository, times(1)).findById(99);
+        when(adresseRepository.findById(404)).thenReturn(Optional.empty());
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> adresseService.findById(404));
+        assertEquals("Not Found", ex.getMessage());
+        verify(adresseRepository).findById(404);
     }
 
     @Test
     void testSaveAdresse() {
         when(adresseRepository.save(adresse)).thenReturn(adresse);
-
-        Adresse result = adresseService.saveAdresse(adresse);
-
-        assertNotNull(result);
-        assertEquals("75000", String.valueOf(result.getCode_postal()));
-        verify(adresseRepository, times(1)).save(adresse);
+        Adresse res = adresseService.saveAdresse(adresse);
+        assertNotNull(res);
+        assertEquals("Place de la République", res.getRue());
+        verify(adresseRepository).save(adresse);
     }
 
     @Test
     void testUpdateAdresse() {
-        Adresse updated = new Adresse("Rue Victor Hugo", 69000, "Lyon");
-
-        when(adresseRepository.findById(1)).thenReturn(Optional.of(adresse));
-        when(adresseRepository.save(any(Adresse.class))).thenReturn(adresse);
-
-        Adresse result = adresseService.updateAdresse(1, updated);
-
-        assertEquals("Rue Victor Hugo", result.getRue());
-        assertEquals(69000, result.getCode_postal());
-        assertEquals("Lyon", result.getVille());
-        verify(adresseRepository, times(1)).findById(1);
-        verify(adresseRepository, times(1)).save(adresse);
+        Adresse updated = new Adresse("Rue Lafayette", 69002, "Lyon");
+        when(adresseRepository.findById(3)).thenReturn(Optional.of(adresse));
+        when(adresseRepository.save(any(Adresse.class))).thenReturn(updated);
+        Adresse res = adresseService.updateAdresse(3, updated);
+        assertEquals("Rue Lafayette", res.getRue());
+        assertEquals(69002, res.getCode_postal());
+        assertEquals("Lyon", res.getVille());
+        verify(adresseRepository).findById(3);
+        verify(adresseRepository).save(adresse);
     }
 
     @Test
     void testDeleteAdresse() {
-        when(adresseRepository.findById(1)).thenReturn(Optional.of(adresse));
-        doNothing().when(adresseRepository).deleteById(1);
-
-        Adresse result = adresseService.deleteAdresse(1);
-
-        assertNotNull(result);
-        assertEquals("Paris", result.getVille());
-        verify(adresseRepository, times(1)).findById(1);
-        verify(adresseRepository, times(1)).deleteById(1);
+        when(adresseRepository.findById(3)).thenReturn(Optional.of(adresse));
+        doNothing().when(adresseRepository).deleteById(3);
+        Adresse res = adresseService.deleteAdresse(3);
+        assertEquals("Paris", res.getVille());
+        verify(adresseRepository).findById(3);
+        verify(adresseRepository).deleteById(3);
     }
 }
