@@ -1,10 +1,7 @@
 package fr.eni.ludotheque.bll;
 
-import static org.junit.jupiter.api.Assertions.*;
-import static org.mockito.Mockito.*;
-
-import java.util.*;
-
+import fr.eni.ludotheque.classes.Client;
+import fr.eni.ludotheque.dal.ClientRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.mockito.InjectMocks;
@@ -12,12 +9,14 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 import org.springframework.boot.test.context.SpringBootTest;
 
-import fr.eni.ludotheque.classes.Client;
-import fr.eni.ludotheque.dal.ClientRepository;
+import java.util.List;
+import java.util.Optional;
+
+import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.Mockito.*;
 
 @SpringBootTest
 public class ClientServiceTest {
-
     @Mock
     private ClientRepository clientRepository;
 
@@ -27,93 +26,76 @@ public class ClientServiceTest {
     private Client client;
 
     @BeforeEach
-    void setUp() {
+    void init() {
         MockitoAnnotations.openMocks(this);
         client = new Client();
-        client.setNo_client(1);
-        client.setNom("Dupont");
-        client.setPrenom("Alice");
-        client.setEmail("alice@exemple.com");
-        client.setNo_telephone("0601020304");
+        client.setNo_client(2);
+        client.setNom("Martin");
+        client.setPrenom("Luc");
+        client.setEmail("luc.martin@exemple.com");
+        client.setNo_telephone("0712345678");
     }
 
     @Test
     void testFindAll() {
-        List<Client> clients = Arrays.asList(client);
-        when(clientRepository.findAll()).thenReturn(clients);
-
-        List<Client> result = clientService.findAll();
-
-        assertEquals(1, result.size());
-        assertEquals("Alice", result.get(0).getPrenom());
-        verify(clientRepository, times(1)).findAll();
+        when(clientRepository.findAll()).thenReturn(List.of(client));
+        List<Client> res = clientService.findAll();
+        assertEquals(1, res.size());
+        assertEquals("Luc", res.get(0).getPrenom());
+        verify(clientRepository).findAll();
     }
 
     @Test
-    void testFindById() {
-        when(clientRepository.findById(1)).thenReturn(Optional.of(client));
-
-        Client result = clientService.findById(1);
-
-        assertNotNull(result);
-        assertEquals("Dupont", result.getNom());
-        verify(clientRepository, times(1)).findById(1);
+    void testFindById_Found() {
+        when(clientRepository.findById(2)).thenReturn(Optional.of(client));
+        Client res = clientService.findById(2);
+        assertEquals("Martin", res.getNom());
+        verify(clientRepository).findById(2);
     }
 
     @Test
     void testFindById_NotFound() {
-        when(clientRepository.findById(99)).thenReturn(Optional.empty());
-
-        Exception exception = assertThrows(RuntimeException.class, () -> {
-            clientService.findById(99);
-        });
-
-        assertEquals("Not Found", exception.getMessage());
-        verify(clientRepository, times(1)).findById(99);
+        when(clientRepository.findById(123)).thenReturn(Optional.empty());
+        RuntimeException ex = assertThrows(RuntimeException.class, () -> clientService.findById(123));
+        assertEquals("Not Found", ex.getMessage());
+        verify(clientRepository).findById(123);
     }
 
     @Test
     void testSaveClient() {
         when(clientRepository.save(client)).thenReturn(client);
-
-        Client result = clientService.saveClient(client);
-
-        assertNotNull(result);
-        assertEquals("alice@exemple.com", result.getEmail());
-        verify(clientRepository, times(1)).save(client);
+        Client res = clientService.saveClient(client);
+        assertEquals("luc.martin@exemple.com", res.getEmail());
+        verify(clientRepository).save(client);
     }
 
     @Test
     void testUpdateClient() {
         Client updated = new Client();
-        updated.setNom("Martin");
-        updated.setPrenom("Luc");
-        updated.setEmail("luc.martin@email.com");
-        updated.setNo_telephone("0712345678");
+        updated.setNom("Petit");
+        updated.setPrenom("Sophie");
+        updated.setEmail("sophie.petit@email.com");
+        updated.setNo_telephone("0765432198");
 
-        when(clientRepository.findById(1)).thenReturn(Optional.of(client));
-        when(clientRepository.save(any(Client.class))).thenReturn(client);
+        when(clientRepository.findById(2)).thenReturn(Optional.of(client));
+        when(clientRepository.save(any(Client.class))).thenReturn(updated);
 
-        Client result = clientService.updateClient(1, updated);
-
-        assertEquals("Martin", result.getNom());
-        assertEquals("Luc", result.getPrenom());
-        assertEquals("luc.martin@email.com", result.getEmail());
-        assertEquals("0712345678", result.getNo_telephone());
-        verify(clientRepository, times(1)).findById(1);
-        verify(clientRepository, times(1)).save(client);
+        Client res = clientService.updateClient(2, updated);
+        assertEquals("Petit", res.getNom());
+        assertEquals("Sophie", res.getPrenom());
+        assertEquals("sophie.petit@email.com", res.getEmail());
+        assertEquals("0765432198", res.getNo_telephone());
+        verify(clientRepository).findById(2);
+        verify(clientRepository).save(client);
     }
 
     @Test
     void testDeleteClient() {
-        when(clientRepository.findById(1)).thenReturn(Optional.of(client));
-        doNothing().when(clientRepository).deleteById(1);
-
-        Client result = clientService.deleteClient(1);
-
-        assertNotNull(result);
-        assertEquals("Dupont", result.getNom());
-        verify(clientRepository, times(1)).findById(1);
-        verify(clientRepository, times(1)).deleteById(1);
+        when(clientRepository.findById(2)).thenReturn(Optional.of(client));
+        doNothing().when(clientRepository).deleteById(2);
+        Client res = clientService.deleteClient(2);
+        assertEquals("Martin", res.getNom());
+        verify(clientRepository).findById(2);
+        verify(clientRepository).deleteById(2);
     }
 }
